# labdog

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .trivyignore  AUDIT_FINDINGS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LABDOG_PLAYBOOKS_REF  README.md  ROADMAP.md  SECURITY.md  TODO.md  barricade.toml  build.sh  dev.sh  docker-compose.yml
backend/: Dockerfile  alembic.ini  bandit-baseline.json  pyproject.toml
backend/.sisyphus/evidence/: t8-resolver-drift.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  (+54 more)
backend/app/: __init__.py  __main__.py  celery_manager.py  config.py  db.py  main.py  settings_service.py  ssh_utils.py
backend/barricade_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: rotate_encryption_key.py
backend/tests/: conftest.py  test_action_cluster.py  test_action_group.py  test_action_group_locking.py  test_action_host.py  test_action_host_locking.py  test_action_orchestrator_routing.py  test_action_packs.py  test_action_packs_api.py  test_action_resolutions_api.py  test_actions_builtins.py  test_actions_runs_validation.py  test_audit.py  test_auth.py  test_bug37_dispatch_after_commit.py  test_bulk_sync.py  test_ca_certs.py  test_ca_certs_actions.py  test_ca_certs_api.py  test_ca_certs_generator.py  test_chain_policies.py  test_composer.py  test_config_env_parsing.py  test_cron.py  test_crypto.py  test_csrf.py  test_diagnose.py  test_diff.py  test_discovery.py  test_drift.py  test_firewall_detection.py  test_git_repos_api.py  test_git_sync.py  test_gitops_converter.py  test_gitops_importer.py  test_gitops_importer_cron_jobs.py  test_gitops_importer_global.py  test_gitops_importer_hosts_entries.py  test_gitops_importer_packages.py  test_gitops_importer_resolver.py  (+58 more)
barricade-lint/: pyproject.toml
barricade-lint/barricade_lint/: __init__.py  cli.py  formatter.py  schema.py
labdog-lint/: pyproject.toml
labdog-lint/labdog_lint/: __init__.py  cli.py  schema.py  validators.py
(+629 files in other folders)
