[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barricade-backend"
version = "0.0.15"
description = "FastAPI backend for Barricade - Ansible-based Linux firewall manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "celery-redbeat>=2.0",
    "redis>=5.2",
    "ansible-runner>=2.4",
    "ansible-core>=2.16",
    "cryptography>=43",
    "fastapi-users[sqlalchemy]>=14",
    "slowapi>=0.1.9",
    "gitpython>=3.1",
    "asyncssh>=2.17",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "testcontainers[postgres]>=4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["integration: marks tests as integration tests (deselect with '-m not integration')"]

[tool.setuptools]
packages = ["app"]
