[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labdog-lint"
version = "0.1.0"
description = "Validate LabDog YAML firewall rule files"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
labdog-lint = "labdog_lint.cli:main"
